Avoid flickering of the tooltip

--- a/src/components/profile/style/profile.less
+++ b/src/components/profile/style/profile.less
@@ -17,21 +17,18 @@
     border-radius: 5px;
     
     .profile-tooltip-inner {
-      top: -15px;
+      top: 5px;
       position: relative;
       width: inherit;
-      height: inherit;
+      height: 50px;
       text-align: center;
     }
     
-    &:before {
-      content: '';
+    .profile-tooltip-arrow {
       border-color: black transparent transparent;
       border-style: solid;
-      border-width: 10px;
-      height: 0;
-      width: 0;
-      position: relative;
+      border-width: 10px 10px 0px 10px;
+      position: absolute;
       top: 65px;
       left: 65px;
     }
