--- a/src/style/app_print.less
+++ b/src/style/app_print.less
@@ -95,15 +95,9 @@
       }
       .profile-area {
         fill: #f00;
-        fill-opacity: 0.85;
+        fill-opacity: 0.5;
       }
-
-      .profile-area {
-        &:hover {
-          fill-opacity: 0.65;
-        }
-      }
-
+      
       .profile-legend,
       .profile-label {
         font-weight: bold;
